# 3D-rendering

./: CMakeLists.txt  README.txt
include/: Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Circle2D.cpp  Circle2D.hpp  Circle3D.cpp  Circle3D.hpp  Color.cpp  Color.hpp  ControllablePoints.cpp  ControllablePoints.hpp  Cube3D.cpp  Cube3D.hpp  GlutLibrary2D.cpp  GlutLibrary2D.hpp  GlutLibrary3D.cpp  GlutLibrary3D.hpp  Light3D.hpp  Matrix2D.cpp  Matrix2D.hpp  Matrix3D.cpp  Matrix3D.hpp  Point.hpp  Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  Ray2D.cpp  Ray2D.hpp  Ray3D.cpp  Ray3D.hpp  ScrolBar.hpp  ScrolBars.hpp  Shape2D.hpp  Shape3D.hpp  Sphere3D.cpp  Sphere3D.hpp  Square2D.cpp  Square2D.hpp  (+6 more)
src/: Camera.cpp  CameraIntersectObjects.cpp  CameraIntersectObjects3D.cpp  RayIntersectCircle.cpp  RayIntersectRay.cpp  RayProjection.cpp  RayTracing.cpp
src/old/: main.cpp  squelette copy.cpp  squelette.cpp
